# textrest

./: .gitignore  README.md  model_schema.md  pubspec.yaml  开发文档-阅读融合系统.md  数据结构文档.md
.claude/: settings.local.json
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: book.rs  book_source.rs  data_base.rs  mod.rs  read_record.rs  web_book.rs
rust/src/database/: book.rs  book_source.rs  chapter.rs  data_base.rs  mod.rs  read_record.rs
rust/src/models/: book.rs  book_source.rs  chapter.rs  chapter_content.rs  config.rs  mod.rs  read_record.rs  rules.rs
rust/src/network/: http_client.rs  mod.rs
rust/src/parser/: base_parser.rs  epub.rs  mod.rs
rust/src/search/: book_info.rs  chapter.rs  mod.rs  search_result.rs  web_book.rs
rust/src/search/parser/: inner_rule.rs  js_engine.rs  json_path.rs  mod.rs  rule_engine.rs  rule_split.rs  selector.rs
rust/src/utils/: book_source_parser.rs  config.rs  file.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_textrest.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_textrest.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+47 files in other folders)
