[package]
name = "rust_lib_textrest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
epub = "2.1"
chrono = "0.4"
lopdf = "0.30"
mobi = "0.1"
twox-hash = "2.1.2"
scraper = "0.25.0"
jsonpath_lib = "0.3"
regex = "1"
boa_engine = "0.20"
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
